# test-postgres-sgx

./: .gitignore  Makefile  Readme.md
app/: Cargo.toml  build.rs  test_pgx.control
app/cfunction/: Cargo.toml  build.rs  melbourne.cpp
app/cfunction/src/: lib.rs
app/src/: lib.rs
app/src/example/: cfunctions.rs  io.rs  mod.rs  types.rs
enclave/: Cargo.toml  build.rs  enclave.edl
enclave/cfunction/: Cargo.toml  build.rs  test.cpp
enclave/cfunction/src/: lib.rs
enclave/src/: lib.rs
