[package]
name = "test_pgx"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
cfunction = { path = "cfunction" }
itertools = "0.10.5"

sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }


[dev-dependencies]
pgx-tests = "0.6.1"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.73"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
